--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "tic-tac-toe",
   "version": "1.0.0",
   "description": "Sample tic tac toe game",
+  "type": "module",
   "scripts": {
+    "test": "mocha",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "chai": "^4.3.10",
     "eslint": "^8.53.0",
+    "jsdom": "^22.1.0",
+    "mocha": "^10.2.0",
     "sass": "^1.69.5",
     "vite": "^4.5.0"
   },
