--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Sample tic tac toe game",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "test": "mocha",
     "dev": "vite",
